--- a/pair.html
+++ b/pair.html
@@ -1,176 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>POPKID-XTR PAIR CODE</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --accent: #00ffe7;
-      --accent2: #ff0080;
-      --bg-dark: #020202;
-      --glass: rgba(15, 15, 25, 0.75);
-      --text: #eafaff;
-    }
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>POPKID-XTR PAIR CODE</title>
 
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: var(--bg-dark);
-      font-family: 'Orbitron', sans-serif;
-      color: var(--text);
-      overflow: hidden;
-    }
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
-    /* Background grid effect */
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-image: linear-gradient(rgba(0,255,255,0.08) 1px, transparent 1px),
-                        linear-gradient(90deg, rgba(0,255,255,0.08) 1px, transparent 1px);
-      background-size: 40px 40px;
-      z-index: 0;
-      animation: moveGrid 20s linear infinite;
-    }
+<style>
+:root{
+  --accent:#00f7ff;
+  --accent2:#ff00c8;
+  --accent3:#7dff00;
+  --text:#eaffff;
+  --glass:rgba(10,15,30,.75);
+}
 
-    @keyframes moveGrid {
-      from { background-position: 0 0; }
-      to { background-position: 40px 40px; }
-    }
+/* base */
+*{box-sizing:border-box;margin:0;padding:0}
 
-    /* Container */
-    .frame {
-      position: relative;
-      z-index: 5;
-      max-width: 360px;
-      margin: auto;
-      top: 20%;
-      padding: 35px 30px;
-      border-radius: 18px;
-      background: var(--glass);
-      backdrop-filter: blur(14px) saturate(180%);
-      border: 1px solid rgba(0, 255, 255, 0.25);
-      box-shadow: 0 0 30px rgba(0, 255, 255, 0.35), 0 0 50px rgba(255, 0, 128, 0.25);
-      text-align: center;
-      animation: fadeIn 1.5s ease;
-    }
+html,body{
+  height:100%;
+  font-family:'Orbitron',sans-serif;
+  color:var(--text);
+  background:#02040a;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  overflow:hidden;
+}
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px) scale(0.95); }
-      to { opacity: 1; transform: translateY(0) scale(1); }
-    }
+/* thunderstorm animated sky */
+body::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  background:
+    radial-gradient(circle at 30% 20%, rgba(0,255,255,.25), transparent 40%),
+    radial-gradient(circle at 80% 70%, rgba(255,0,200,.2), transparent 40%),
+    linear-gradient(#02040a,#000);
+  animation:stormGlow 6s ease-in-out infinite;
+  pointer-events:none;
+  z-index:0;
+}
 
-    /* Glitch Header */
-    .title {
-      font-size: 1.3rem;
-      margin-bottom: 20px;
-      font-family: 'Share Tech Mono', monospace;
-      text-transform: uppercase;
-      color: var(--accent);
-      position: relative;
-      animation: glitch 2s infinite;
-    }
+@keyframes stormGlow{
+  0%,100%{opacity:.7}
+  50%{opacity:1}
+}
 
-    @keyframes glitch {
-      0% { text-shadow: 2px 0 var(--accent2), -2px 0 var(--accent); }
-      20% { text-shadow: -2px -2px var(--accent2), 2px 2px var(--accent); }
-      40% { text-shadow: 2px -2px var(--accent2), -2px 2px var(--accent); }
-      60%, 100% { text-shadow: none; }
-    }
+/* lightning flash */
+body::after{
+  content:"";
+  position:fixed;
+  inset:0;
+  background:linear-gradient(120deg, transparent, rgba(255,255,255,.7), transparent);
+  opacity:0;
+  animation:lightning 5s infinite;
+  pointer-events:none;
+  z-index:0;
+}
 
-    /* Input & Button */
-    .input-container {
-      display: flex;
-      gap: 12px;
-      justify-content: center;
-      margin-bottom: 18px;
-    }
+@keyframes lightning{
+  0%,92%,100%{opacity:0}
+  93%{opacity:1}
+  94%{opacity:0}
+  96%{opacity:.8}
+  97%{opacity:0}
+}
 
-    .input-container input {
-      flex: 1;
-      padding: 12px;
-      font-size: 1rem;
-      border-radius: 10px;
-      border: 1px solid rgba(0,255,255,0.4);
-      background: rgba(255,255,255,0.1);
-      color: var(--text);
-      outline: none;
-      font-family: 'Share Tech Mono', monospace;
-    }
+/* main frame */
+.frame{
+  position:relative;
+  z-index:5;
+  width:360px;
+  padding:38px 30px;
+  border-radius:18px;
+  background:var(--glass);
+  backdrop-filter:blur(18px) saturate(180%);
+  border:1px solid rgba(0,255,255,.25);
+  text-align:center;
+  box-shadow:
+    0 0 25px rgba(0,255,255,.3),
+    0 0 40px rgba(255,0,200,.2);
+}
 
-    .input-container input:focus {
-      border-color: var(--accent);
-      box-shadow: 0 0 12px var(--accent);
-    }
+/* neon border */
+.frame::before{
+  content:"";
+  position:absolute;
+  inset:-1px;
+  border-radius:18px;
+  background:linear-gradient(45deg,var(--accent),var(--accent2),var(--accent3),var(--accent));
+  background-size:300% 300%;
+  animation:borderMove 6s linear infinite;
+  filter:blur(10px);
+  opacity:.6;
+  z-index:-1;
+}
 
-    .input-container button {
-      padding: 12px 16px;
-      border: none;
-      border-radius: 10px;
-      font-weight: bold;
-      font-size: 0.95rem;
-      cursor: pointer;
-      background: linear-gradient(135deg, var(--accent), var(--accent2));
-      color: #fff;
-      transition: 0.3s;
-      box-shadow: 0 0 14px rgba(0, 255, 255, 0.5);
-    }
+@keyframes borderMove{
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
 
-    .input-container button:hover {
-      transform: translateY(-2px) scale(1.05);
-      box-shadow: 0 0 20px rgba(0, 255, 255, 0.7),
-                  0 0 30px rgba(255, 0, 128, 0.4);
-    }
+/* title */
+.title{
+  font-family:'Share Tech Mono',monospace;
+  font-size:1.4rem;
+  margin-bottom:22px;
+  color:var(--accent);
+  text-shadow:0 0 15px var(--accent);
+  letter-spacing:1px;
+}
 
-    /* Terminal response */
-    #waiting-message {
-      display: none;
-      font-family: 'Share Tech Mono', monospace;
-      text-align: left;
-      background: rgba(0,0,0,0.6);
-      padding: 12px;
-      border-radius: 8px;
-      margin-top: 12px;
-      font-size: 0.95rem;
-      line-height: 1.4;
-      border: 1px solid rgba(0,255,255,0.2);
-      box-shadow: inset 0 0 10px rgba(0,255,255,0.2);
-    }
+/* input area */
+.input-container{
+  display:flex;
+  gap:12px;
+  margin-bottom:18px;
+}
 
-    /* Copy button */
-    #copy-btn {
-      display: none;
-      margin-top: 15px;
-      padding: 10px 18px;
-      border-radius: 50px;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-      font-size: 0.9rem;
-      color: #fff;
-      background: linear-gradient(135deg, #00ff99, #00cc66);
-      box-shadow: 0 0 12px rgba(0,255,150,0.6);
-      transition: 0.3s;
-    }
+.input-container input{
+  flex:1;
+  padding:13px;
+  border-radius:10px;
+  border:1px solid rgba(0,255,255,.4);
+  background:rgba(255,255,255,.05);
+  color:var(--text);
+  font-family:'Share Tech Mono',monospace;
+  outline:none;
+  font-size:.95rem;
+  transition:.3s;
+}
 
-    #copy-btn:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 18px rgba(0,255,150,0.9);
-    }
-  </style>
+.input-container input:focus{
+  border-color:var(--accent);
+  box-shadow:0 0 16px var(--accent);
+}
+
+/* stylish action button */
+.input-container button{
+  padding:12px 18px;
+  border:none;
+  border-radius:50px;
+  font-weight:bold;
+  cursor:pointer;
+  color:#fff;
+  background:linear-gradient(135deg,var(--accent),var(--accent2));
+  box-shadow:
+    0 0 15px rgba(0,255,255,.6),
+    0 0 25px rgba(255,0,200,.4);
+  transition:.25s;
+}
+
+.input-container button:hover{
+  transform:translateY(-2px) scale(1.05);
+  box-shadow:
+    0 0 25px rgba(0,255,255,.9),
+    0 0 40px rgba(255,0,200,.6);
+}
+
+/* terminal box */
+#waiting-message{
+  display:none;
+  text-align:left;
+  font-family:'Share Tech Mono',monospace;
+  background:rgba(0,0,0,.6);
+  padding:12px;
+  border-radius:8px;
+  font-size:.95rem;
+  border:1px solid rgba(0,255,255,.25);
+}
+
+/* copy button */
+#copy-btn{
+  display:none;
+  margin-top:16px;
+  padding:11px 20px;
+  border-radius:50px;
+  border:none;
+  cursor:pointer;
+  font-weight:bold;
+  color:#fff;
+  background:linear-gradient(135deg,#00ff99,#00cc66);
+  box-shadow:0 0 16px rgba(0,255,150,.7);
+  transition:.25s;
+}
+
+#copy-btn:hover{
+  transform:scale(1.06);
+  box-shadow:0 0 24px rgba(0,255,150,.95);
+}
+</style>
 </head>
+
 <body>
 
 <div class="frame">
   <p class="title">POPKID-XTR PAIR SITE</p>
 
   <div class="input-container">
-    <input placeholder="Enter WhatsApp Number" type="number" id="number">
-    <button id="submit">ENTER</button>
+    <input placeholder="Enter WhatsApp Number" type="tel" id="number">
+    <button id="submit">⚡ GENERATE</button>
   </div>
 
   <p id="waiting-message">Please Wait...</p>
@@ -178,50 +211,52 @@
 </div>
 
 <script>
-  const msg = document.getElementById("waiting-message");
-  const submitBtn = document.getElementById("submit");
-  const numberInput = document.getElementById("number");
-  const copyBtn = document.getElementById("copy-btn");
+const msg = document.getElementById("waiting-message");
+const submitBtn = document.getElementById("submit");
+const numberInput = document.getElementById("number");
+const copyBtn = document.getElementById("copy-btn");
 
-  submitBtn.addEventListener("click", async (e) => {
-    e.preventDefault();
-    const value = numberInput.value.replace(/[^0-9]/g, "");
+submitBtn.addEventListener("click", async (e) => {
+  e.preventDefault();
 
-    if (!value) {
-      msg.innerText = "⚠ Enter your WhatsApp number with Country Code";
-      msg.style.display = "block";
-      copyBtn.style.display = "none";
-      return;
-    }
+  const value = numberInput.value.replace(/[^0-9]/g, "");
 
-    if (value.length < 11) {
-      msg.innerText = "❌ Invalid Number";
-      msg.style.display = "block";
-      copyBtn.style.display = "none";
-      return;
-    }
-
-    msg.innerText = "⏳ Please Wait...";
+  if (!value) {
+    msg.innerText = "⚠ Enter your WhatsApp number with Country Code";
     msg.style.display = "block";
+    copyBtn.style.display = "none";
+    return;
+  }
 
-    try {
-      const res = await fetch(`/code?number=${value}`);
-      const data = await res.json();
-      const code = data.code || "Service Unavailable";
+  if (value.length < 11) {
+    msg.innerText = "❌ Invalid Number";
+    msg.style.display = "block";
+    copyBtn.style.display = "none";
+    return;
+  }
 
-      msg.innerText = "✅ CODE: " + code;
-      copyBtn.style.display = "inline-block";
+  msg.innerText = "⏳ Generating Code...";
+  msg.style.display = "block";
 
-      copyBtn.onclick = () => {
-        navigator.clipboard.writeText(code);
-        copyBtn.innerText = "✔ Copied!";
-        setTimeout(() => (copyBtn.innerText = "📋 Copy Code"), 2000);
-      };
-    } catch (err) {
-      msg.innerText = "❌ Error fetching code.";
-      copyBtn.style.display = "none";
-    }
-  });
+  try {
+    const res = await fetch(`/code?number=${value}`);
+    const data = await res.json();
+    const code = data.code || "Service Unavailable";
+
+    msg.innerText = "✅ CODE: " + code;
+    copyBtn.style.display = "inline-block";
+
+    copyBtn.onclick = () => {
+      navigator.clipboard.writeText(code);
+      copyBtn.innerText = "✔ Copied!";
+      setTimeout(() => copyBtn.innerText = "📋 Copy Code", 2000);
+    };
+
+  } catch (err) {
+    msg.innerText = "❌ Error fetching code.";
+    copyBtn.style.display = "none";
+  }
+});
 </script>
 
 </body>
